[package]

name = "solicit"
version = "0.4.4"
authors = ["Marko Lalic <marko.lalic@gmail.com>"]

description = "A library implementation of HTTP/2"
repository = "https://github.com/mlalic/solicit"
homepage = "https://github.com/mlalic/solicit"
readme = "README.md"
license = "MIT"
keywords = ["http2", "protocol", "solicit"]
documentation = "https://mlalic.github.io/solicit/solicit/index.html"

[dependencies]
hpack = "0.3"
log = "^0.3"

[dependencies.openssl]
# >= 0.7.9 is required for SslStream to be Send
version = "0.7.9"
features = ["tlsv1_2", "npn", "alpn"]
optional = true

[features]
live_tests = []
tls = ["openssl", "openssl/tlsv1_2", "openssl/npn", "openssl/alpn"]
